--- a/package.json
+++ b/package.json
@@ -11,11 +11,12 @@
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
     "normalize.css": "^8.0.1",
-    "notiflix": "^3.2.5",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-loader-spinner": "^5.3.4",
     "react-router-dom": "^6.4.5",
     "react-scripts": "5.0.1",
+    "react-toastify": "^9.1.1",
     "shortid": "^2.2.16",
     "sort-by": "^1.2.0",
     "styled-components": "^5.3.6",
