--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
     "@types/styled-components": "^5.1.26",
+    "axios": "^1.2.2",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
     "normalize.css": "^8.0.1",
